--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -66,9 +66,9 @@
             
             <div class="col-12 col-md-10"> <!-- Add this div -->
                 <div class="card text-center">
-                    <form id="includeAnotherLecturerForm" action="/includeAnotherLecturerForm" method="post">
+                    <form id="includeAnotherLecturerForm" action="/includeAnotherLecturer" method="post">
                         <div class="card text-center">
-                            <form id="includeAnotherLecturerForm" action="/includeAnotherLecturerForm" method="post">
+                            <form id="includeAnotherLecturerForm" action="/includeAnotherLecturer" method="post">
                                 <div class="mb-3">
                                     <label class="form-label">Add Lecturer
                                         <input name="includeAnotherLecturer" type="text" class="form-control" required>
