--- a/SRC/views/searchAppointment.ejs
+++ b/SRC/views/searchAppointment.ejs
@@ -26,7 +26,7 @@
                   <h4><%= appointment.eventTitle %></h4>
                   <p>Lecturer Name: <%= appointment.lecturerName %></p>
                   <p>Date: <%= appointment.date %></p>
-                  <a class="join-button">Join</a>
+                  <a class="join-button" aria-current="page" href="/Join?appointmentId=<%= appointment._id %>">Join</a>
                 </div>
               </div>
             <% }) %>
