disable the placeholder option from being selected as a lecture's names

--- a/SRC/views/scheduleAppointment.ejs
+++ b/SRC/views/scheduleAppointment.ejs
@@ -26,7 +26,7 @@
 
                 <label class="form-label select-label">Lecturer's Name
                     <select class="form-control select" data-mdb-filter="true" id="lecturerName">
-                      <option value=""> Select a lecturer's name </option>
+                      <option value="" disabled selected> Select a lecturer's name </option>
                     </select>
                 </label><br>
                 <p class="form-errors" id="lecturerNameError"></p>
