--- a/SRC/views/allTimeslots.ejs
+++ b/SRC/views/allTimeslots.ejs
@@ -57,7 +57,18 @@
                 </section>
                 <div class="appointments-box">
                     <h2>Available Time Slots</h2>
-                    <!-- Placeholder for table -->
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Time</th>
+                                    <th scope="col">Number of Students</th>
+                                    <th scope="col">Date</th>
+                                </tr>
+                            </thead>
+ 
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
