Change table headings

--- a/SRC/views/allTimeslots.ejs
+++ b/SRC/views/allTimeslots.ejs
@@ -62,7 +62,7 @@
                             <thead>
                                 <tr>
                                     <th scope="col">Time</th>
-                                    <th scope="col">Number of Allowed students</th>
+                                    <th scope="col">Number of allowed students</th>
                                     <th scope="col">Date</th>
                                 </tr>
                             </thead>
