--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -44,7 +44,7 @@
                         <nav class="nav flex-column">
                             <a class="nav-link active" aria-current="page" href="/scheduleAppointment">Set
                                 Appointment</a>
-                            <a class="nav-link" href="/timeslots/getAll">View Available Time slots</a>
+                            <a class="nav-link" href="/availableTimeslots">View Available Time slots</a>
                             <a class="nav-link" href="#">Cancel Appointments</a>
                             <a class="nav-link" href="/Settings">Settings</a>
                         </nav>
