--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -67,6 +67,7 @@
                                     <th scope="col">Date & Time</th>
                                     <th scope="col">Event Title</th>
                                     <th scope="col">Lecturer Name</th>
+                                    <th scope="col">Status</th>
                                     <th scope="col">Modify Meeting</th>
                                     <th scope="col">Cancel Meeting</th>
 
@@ -79,20 +80,27 @@
                                         <% appointments.forEach(function(appointment){ %>
 
                                             <tr>
-                                                
-                                                    <td>
-                                                        <%= appointment.date %>
-                                                    </td>
-                                                    <td>
-                                                        <%= appointment.eventTitle %>
-                                                    </td>
-                                                    <td>
-                                                        <%= appointment.lecturerName %>
-                                                    </td>
-                                                    <td><a href="/updateConsultationTimes/<%= appointment.id %>">Modify</a></td>
-                                                    <td><a href="/cancel/<%= appointment.id %>">Cancel</a></td>
 
-                                               
+                                                <td>
+                                                    <%= appointment.date %>
+                                                </td>
+                                                <td>
+                                                    <%= appointment.eventTitle %>
+                                                </td>
+                                                <td>
+                                                    <%= appointment.lecturerName %>
+                                                </td>
+                                                <td>
+                                                    <%= appointment.status%>
+                                                </td>
+                                                <td><a href="/updateConsultationTimes/<%= appointment.id %>">Modify</a>
+                                                </td>
+                                                <td>
+                                                <% if(appointment.status === "Upcoming"){ %>
+                                                <a href="/cancel/<%= appointment.id %>">Cancel</a>
+                                                    <%}%>
+                                                </td>
+
                                             </tr>
                                             <%}); %>
 
