the lecturer only sees upcoming appointments on the dashboard

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -102,6 +102,8 @@
                                     <td>No appointments available.</td>
                                     <% }else { %>
                                         <% appointments.forEach(function(appointment){ %>
+                                            <%if (appointment.status === 'Upcoming') { %>
+
                                             <tr>
 
                                                 <td>
@@ -123,7 +125,7 @@
                                                 </td>
                                                 <td><a href="/cancel/<%= appointment.id %>">Cancel</a></td>
                                             </tr>
-
+                                            <%}%>
                                             <%}); %>
 
 
