start new section

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -83,7 +83,12 @@
                     </div>
                 </div>
             </div>
-           
+            <div class="col-12 col-md-10">
+                <section id="dashboard-heading">
+                    <h1>Lecturer Appointment Dashboard</h1>
+                </section>
+                
+            </div>
         </div>
     </div>
     <script src="../scripts/hideflashmessage.js"></script>
