add new table with columns

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -87,7 +87,25 @@
                 <section id="dashboard-heading">
                     <h1>Lecturer Appointment Dashboard</h1>
                 </section>
-                
+                <div class="appointments-box">
+                    <h2>Lecturer Appointments</h2>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+
+                                    <th scope="col">Date & Time</th>
+                                    <th scope="col">Event Title</th>
+                                    <th scope="col">Joined Students</th>
+                                    <th scope="col">Status</th>
+                                    <th scope="col">Modify Meeting</th>
+                                    <th scope="col">Cancel Meeting</th>
+                                </tr>
+                            </thead>
+                            
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
