show event title

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -113,7 +113,10 @@
                                                         &
                                                         <%= appointment.timeslot.availabilityTime%>                                                   
                                                     </td>
-                                               
+                                                <td>    
+                                                    <%= appointment.eventTitle %>
+                                                </td>
+                                                
                                             </tr>
                                             
                                             <%}); %>
