show appointment status

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -116,7 +116,14 @@
                                                 <td>    
                                                     <%= appointment.eventTitle %>
                                                 </td>
-                                                
+                                                <td><!--Coming soon-->
+                                                    <!--<%= appointment.lecturerName%>-->
+                                                        <!--name of the student who created the appointment-->
+                                                </td>
+                                                <td>
+                                                    <%= appointment.status%>
+                                                </td>
+                                               
                                             </tr>
                                             
                                             <%}); %>
