show edit button  if an appointment is upcoming

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -129,7 +129,11 @@
                                                         href="/update/<%= appointment.id %>" class="btn btn-secondary" role="button">Edit</a>
                                                         <%}%>
                                                 </td>
-                    
+                                                <td>
+                                                        <% if(appointment.status==="Upcoming" ){ %>
+                                                            <a href="/cancel/<%= appointment.id %>" class="btn btn-danger" role="button">Cancel</a>
+                                                        <%}%>
+                                                 </td>
                                             </tr>
                                             
                                             <%}); %>
