--- a/SRC/views/Login.ejs
+++ b/SRC/views/Login.ejs
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/Login.css"> 
+    <link rel="stylesheet" href="/styles/Login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <script defer src="/scripts/Login.js"></script>
     <title>Login</title>
 </head>
 
 <body>
+
+
     <!----------------------Main Container-------------------------------------->
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
 
@@ -39,17 +41,28 @@
 
                         <div class="password-wrapper ">
                             <input name="password" type="password" class="form-control form=control-lg bg-light fs-6"
-                                placeholder="Password" id = "password">
-                               <i id="togglePassword" class="fa fa-eye password-icon"></i>
+                                placeholder="Password" id="password">
+                            <i id="togglePassword" class="fa fa-eye password-icon"></i>
                         </div>
 
                         <div class="input-group mb-5">
                             <input type="submit" name="loginButton" id="loginButton" value="Login">
                         </div>
                     </form>
-                    <div class="forgot">
-                        <small><a href="#">Forgot Password</a></small>
-                    </div>
+
+                   <% if (passwordMessage && passwordMessage.length > 0) { %>
+                        <div class="alert alert-danger">
+                          <%= passwordMessage %>
+                        </div>
+                      <% } else if (emailMessage && emailMessage.length > 0) { %>
+                        <div class="alert alert-danger">
+                          <%= errorMessage %>
+                        </div>
+                      <% } %>
+
+                            <div class="forgot">
+                                <small><a href="#">Forgot Password</a></small>
+                            </div>
                 </div>
                 <a class="linkText" href="signup">Don't have an Account? Create Account.</a>
 
