--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -28,6 +28,7 @@
             overflow-x: auto;
         }
     </style>
+    <link rel="stylesheet" href="../styles/hideflashmessage.css">
     <title>Lecturer Dashboard</title>
 </head>
 
@@ -56,7 +57,14 @@
             </nav>
         </header>
     </section>
-
+    <section>
+        <% if (successMessage && successMessage.length > 0) { %>
+            <div class="alert alert-success">
+              <%= successMessage %>
+            </div>
+          <% } %>
+          
+    </section>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-md-2">
@@ -139,6 +147,7 @@
             </div>
         </div>
     </div>
+    <script src="../scripts/hideflashmessage.js"></script>
 </body>
 
 </html>
