--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -35,6 +35,14 @@
             </nav>
         </header>
     </section>
+    <section>
+        <% if (successMessage && successMessage.length> 0) { %>
+            <div class="alert alert-success">
+                <%= successMessage %>
+            </div>
+            <% } %>
+
+    </section>
     <!--Body-->
     <div class="container-fluid">
         <div class="row">
@@ -80,35 +88,36 @@
                                     <td>No appointments available.</td>
                                     <% }else { %>
                                         <% appointments.forEach(function(appointment) { %>
-                                            <%if (appointment.status === 'Upcoming') { %>
-                                            <tr>
+                                            <%if (appointment.status==='Upcoming' ) { %>
+                                                <tr>
 
-                                                <td>
-                                                    <%= appointment.date %>
-                                                </td>
-                                                <td>
-                                                    <%= appointment.eventTitle %>
-                                                </td>
-                                                <td>
-                                                    <%= appointment.lecturerName %>
-                                                </td>
-                                                <td>
-                                                    <%= appointment.status%>
-                                                </td>
-                                                <td><a href="/updateConsultationTimes/<%= appointment.id %>">Modify</a>
-                                                </td>
-                                                <td>
-                                                <% if(appointment.status === "Upcoming"){ %>
-                                                <a href="/cancel/<%= appointment.id %>">Cancel</a>
-                                                    <%}%>
-                                                </td>
+                                                    <td>
+                                                        <%= appointment.date %>
+                                                    </td>
+                                                    <td>
+                                                        <%= appointment.eventTitle %>
+                                                    </td>
+                                                    <td>
+                                                        <%= appointment.lecturerName %>
+                                                    </td>
+                                                    <td>
+                                                        <%= appointment.status%>
+                                                    </td>
+                                                    <td><a
+                                                            href="/updateConsultationTimes/<%= appointment.id %>">Modify</a>
+                                                    </td>
+                                                    <td>
+                                                        <% if(appointment.status==="Upcoming" ){ %>
+                                                            <a href="/cancel/<%= appointment.id %>">Cancel</a>
+                                                            <%}%>
+                                                    </td>
 
-                                            </tr>
-                                            <%}%>
-                                            <%}); %>
-
-
+                                                </tr>
                                                 <%}%>
+                                                    <%}); %>
+
+
+                                                        <%}%>
 
 
 
@@ -128,6 +137,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="../scripts/hideflashmessage.js"></script>
 </body>
 
 </html>
